--- a/force-app/main/default/lwc/reportSchedulingManager/reportSchedulingManager.html
+++ b/force-app/main/default/lwc/reportSchedulingManager/reportSchedulingManager.html
@@ -71,7 +71,7 @@
                     </header>
 
                     <div class="slds-modal__content slds-p-around_medium">
-                        <c-report-folder-and-list onadd={handleAddReport}></c-report-folder-and-list>
+                        <c-report-folder-and-list onreportselect={handleAddReport}></c-report-folder-and-list>
                     </div>
 
                     <footer class="slds-modal__footer">
